--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar  navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/images/logo.png" alt="">
+          <img src="./images/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -120,7 +120,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card panda-card h-100 shadow">
-            <img src="/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Supply 350</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -133,7 +133,7 @@
         </div>
         <div class="col">
           <div class="card panda-card h-100 shadow">
-            <img src="/images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike 360</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -145,7 +145,7 @@
         </div>
         <div class="col">
           <div class="card panda-card h-100 shadow">
-            <img src="/images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -163,7 +163,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card panda-card h-100 shadow">
-            <img src="/images/bags/bag-1.png" class="card-img-top" alt="...">
+            <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Laltu Bag</h5>
               <h5>$120</h5>
@@ -177,7 +177,7 @@
         </div>
         <div class="col">
           <div class="card panda-card h-100 shadow">
-            <img src="/images/bags/bag-2.png" class="card-img-top" alt="...">
+            <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Blue Niltu Bag</h5>
               <h5>$350</h5>
@@ -190,7 +190,7 @@
         </div>
         <div class="col">
           <div class="card panda-card h-100 shadow">
-            <img src="/images/bags/bag-3.png" class="card-img-top" alt="...">
+            <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Kaltu Bag</h5>
               <h5>$169</h5>
@@ -204,7 +204,7 @@
         </div>
       </div>
     </section>
-    <section style="height: 300px" class="bg-info d-flex justify-content-center align-items-center mt-5 mb-5" id="subscribe">
+    <section style="height: 300px" class="bg-info rounded d-flex justify-content-center align-items-center mt-5 mb-5" id="subscribe">
       <div>
         <h2>LET'S STAY IN TOUCH</h2>
         <H5>Get updates on sales, special and more</H5>
